Watch does continuous sensing

--- a/Prototypes/TestingWatch3/wear/src/main/res/layout/activity_main.xml
+++ b/Prototypes/TestingWatch3/wear/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:padding="@dimen/box_inset_layout_padding"
-    tools:context="com.studybuddy.testingwatch.MainActivity"
+    tools:context="com.studybuddy.testingwatch.HeartActivity"
     tools:deviceIds="wear">
 
     <FrameLayout
@@ -24,6 +24,12 @@
             android:textAllCaps="false"
             android:textColor="@color/black"
             android:visibility="visible" />
+
+        <ViewStub
+            android:id="@+id/viewStub"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout="@layout/activity_main" />
 
     </FrameLayout>
 </RelativeLayout>
